fix: correct the z-index and postion of the FilterConcerts component

--- a/src/pages/concerts/concertDetails/concertDetails.module.css
+++ b/src/pages/concerts/concertDetails/concertDetails.module.css
@@ -4,8 +4,8 @@
 }
 .filterConcerts {
   position: absolute;
-  top: 70px;
-  z-index: 45;
+  top: 30px;
+  z-index: 501;
   color: #000;
   padding: 1rem 0;
   width: 100%;
@@ -159,7 +159,7 @@
   bottom: 0px;
   background-color: #fff;
   padding: 2px;
-  z-index: 13;
+  z-index: 500;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -186,24 +186,7 @@
 .colorWhite {
   color: #fff;
 }
-@media (min-width: 768px) {
-  .filterConcerts {
-    background-color: #e1eae7;
-    border-radius: 16px;
-    width: 325px;
-    right: 15px;
-    top: 40px;
-  }
-  .filter {
-    display: inline;
-  }
-  .allConcertsWrapper {
-    margin: 0 10%;
-  }
-  .heading {
-    font-size: 1.125rem;
-  }
-}
+
 .NoConcerts {
   width: 100%;
   height: 100%;
@@ -233,6 +216,36 @@
   color: #48484a;
   font-weight: 400;
 }
+.mapContainer {
+  height: 100vh;
+  width: 100%;
+}
+.map {
+  height: 100%;
+  overflow: hidden;
+}
+.mapIcon {
+  border-radius: 50%;
+}
+
+@media (min-width: 768px) {
+  .filterConcerts {
+    background-color: #e1eae7;
+    border-radius: 16px;
+    width: 325px;
+    right: 15px;
+    top: 40px;
+  }
+  .filter {
+    display: inline;
+  }
+  .allConcertsWrapper {
+    margin: 0 10%;
+  }
+  .heading {
+    font-size: 1.125rem;
+  }
+}
 
 @media (min-width: 1024px) {
   :root {
@@ -258,6 +271,7 @@
     height: var(--mapContainer-height);
     overflow: hidden;
   }
+
   .artistConcertContainer {
     margin: 0;
   }
